# GADigitizedTransformations

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  criticalLines.html
.github/workflows/: linuxBuild.yml
gaLib/e3ga/: BasisTransformations.hpp  Constants.hpp  DualCoefficients.hpp  Geometric.hpp  GeometricExplicit.hpp  Inner.hpp  InnerExplicit.hpp  Mvec.cpp  Mvec.hpp  Outer.hpp  OuterExplicit.hpp  PythonBindings.cpp  Utility.hpp
gaLib/klein/: rotor.hpp
geogebra/: DigitizedReflectionSetOfRemainders.ggb
img/: ellipse10-6.pgm  ellipse10-6_transformed.pgm  garamon_original.pgm  input.pgm  rings.pgm
include/: ExternalFilesUtilities.h  GADigitiizedTransformationProperties.h  GADigitizedRotation.h  GADigitizedTransformationImage.h  GADigitizedTransformationProperties.h  GAPixelTransformation.h  GATransformationsGeneration.h  scene.h
js/: 1_display_quasiShearRotations.html  DigitizedGeometryCreation.js  DigitizedTransformation.js  GridUtilities.js
listBijectiveDigitizedReflections/: bijectiveDigitizedReflectionsPlane10.txt  bijectiveDigitizedReflectionsPlane100.txt  bijectiveDigitizedReflectionsPlane20.txt  bijectiveDigitizedReflectionsPlane4.txt  bijectiveDigitizedReflectionsPlane5.txt  bijectiveDigitizedReflectionsPlane6.txt  bijectiveDigitizedReflectionsPlane8.txt  bijectiveDigitizedReflectionsSpace.txt
src/: ExternalFilesUtilities.cpp  GADigitizedTransformationImage.cpp  GATransformationsGeneration.cpp  main.cpp  scene.cpp
